--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>School Stash - Sistema de Controle de Depósito Escolar</title>
-    <meta name="description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>School Stash — Sistema de Controle de Depósito Escolar</title>
+    <meta name="description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações." />
     <meta name="author" content="School Stash" />
 
-    <meta property="og:title" content="School Stash - Sistema de Controle de Depósito Escolar" />
-    <meta property="og:description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações" />
+    <!-- Canonical -->
+    <link rel="canonical" href="https://schoolstash.vercel.app/" />
+
+    <!-- Manifest e ícones (arquivos dentro de /public) -->
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" href="/logo-sesi.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Tema do navegador -->
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#0b1020" />
+    <meta name="color-scheme" content="light dark" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="School Stash — Sistema de Controle de Depósito Escolar" />
+    <meta property="og:description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://schoolstash.vercel.app/" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:title" content="School Stash — Sistema de Controle de Depósito Escolar" />
+    <meta name="twitter:description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
     <div id="root"></div>
+    <!-- Em dev o Vite carrega direto do src -->
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>Ative o JavaScript para usar o School Stash.</noscript>
   </body>
 </html>
