--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="School Stash" />
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://schoolstash.vercel.app/" />
+    <link rel="canonical" href="https://schoolstash-gppj.vercel.app/" />
 
     <!-- Manifest e ícones (arquivos dentro de /public) -->
     <link rel="manifest" href="/manifest.webmanifest" />
@@ -26,7 +26,7 @@
     <meta property="og:title" content="School Stash — Sistema de Controle de Depósito Escolar" />
     <meta property="og:description" content="Sistema moderno de controle de inventário escolar com gestão de pedidos e movimentações." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://schoolstash.vercel.app/" />
+    <meta property="og:url" content="https://schoolstash-gppj.vercel.app/" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Twitter -->
